# rxe

./: Cargo.toml  LICENSE  README.md  rxe.yaml
.github/workflows/: clippy.yml  release.yml  rust.yml  test.yml
src/: command.rs  config.rs  domain.rs  helper.rs  macros.rs  main.rs  prompt.rs  util.rs
src/cmd/: exec.rs  mod.rs
src/constraints/: choice.rs  flag.rs  mod.rs  number.rs  text.rs
src/domain/: argument.rs  argument_value.rs  command.rs  constraint.rs  mod.rs
src/domain/config/: argument.rs  config.rs  mod.rs
src/domain/inputted/: command.rs  mod.rs
src/helper/: identify.rs  mod.rs  range_shift.rs  replace_iter.rs
src/placeholder/: fill.rs  mod.rs  parse.rs
src/runner/: mod.rs  run.rs  tmpfile.rs  win.rs
src/values/: flag.rs  mod.rs  number.rs  text.rs
tests/: acceptable_config.yaml
