[package]
name = "rxe"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Easily customizable command runner made with Rust 🦀"
repository = "https://github.com/loxygenK/rxe"
keywords = ["runner", "task"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rstest = "0.12.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.8.24"
rand = "0.8.5"
once_cell = "1.11.0"
regex = "1.5.6"
atty = "0.2.14"
